<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/video_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/video_id"
                android:layout_marginBottom="15dp"
                android:visibility="gone"
                android:inputType="number"/>
            <EditText
                android:id="@+id/car_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/car_number"
                android:layout_marginBottom="15dp"
                android:inputType="textCapCharacters"/>

            <EditText
                android:id="@+id/tech_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tech_name"
                android:layout_marginBottom="10dp"
                android:inputType="textPersonName"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_weight="0.5"
                android:foreground="?attr/selectableItemBackground"
                android:text="Cancel"
                android:textColor="@android:color/white"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle,RtlHardcoded" />
            <Button
                android:id="@+id/btnUploadContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_weight="0.5"
                android:foreground="?attr/selectableItemBackground"
                android:text="Next"
                android:textColor="@android:color/white"
                android:layout_margin="5dp"

                tools:ignore="ButtonStyle,RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>